--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,74 +1,75 @@
+#contact {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  color: set-text-color($secondary-color);
 
-#contact{
-    height: 100vh;
-    width: 100vw;
+  * {
     margin: 0;
     padding: 0;
+  }
+
+  .container-contact {
     color: set-text-color($secondary-color);
+    display: flex;
 
-    * {
-        margin: 0;
-        padding: 0;
+    flex-direction: row;
+    .contact-right,
+    .contact-left {
+      height: 100vh;
+      width: 100%;
     }
-    
-    .container-contact {
+
+    .contact-right {
+      padding-top: 15vh;
+      background-color: $secondary-color;
+      box-sizing: border-box;
+      width: 100%;
+
+      h2 {
+        font-size: 2.4rem;
+        margin-bottom: 2vh;
+        color: $primary-color;
+        font-weight: 700;
+      }
+
+      h3 {
+        font-size: 2rem;
+        width: 20vw;
+        margin-bottom: 2vh;
+        color: $primary-color;
+        background-color: set-text-color($primary-color);
+        font-weight: 600;
+        padding: 4px 10px;
+        text-align: center;
+        @include easeOut;
+        &:hover {
+          background-color: set-text-color($secondary-color);
+          color: $secondary-color;
+          cursor: pointer;
+        }
+      }
+
+      p {
+        margin-bottom: 5vh;
+      }
+
+      i {
         color: set-text-color($secondary-color);
-        display: flex;
-
-
-        flex-direction: row;
-      .contact-right, 
-      .contact-left {
-          height: 100vh;
-          width:100%;
+        @include easeOut();
+        padding: 1vw;
+        &:hover {
+          color: set-text-color($primary-color);
+        }
       }
 
-      .contact-right {
-          padding-top: 15vh;          
-          background-color: $secondary-color;
-          box-sizing: border-box; 
-          width: 100%;
-
-          h2 {
-            font-size: 2.4rem;
-            margin-bottom: 2vh;
-            color: $primary-color;
-            font-weight: 700;
-
-          }
-
-          h3 {
-              font-size: 2rem;
-              width:8w;
-              border-bottom: 2px #FFFFFF solid;
-              margin-bottom: 2vh;
-              color: #FFFFFF;
-              font-weight: 600;
-             
-          }
-
-          p {
-              margin-bottom: 2vh;
-          }
-
-          i{
-            color: $primary-color;
-            @include easeOut();
-            padding: 1vw;
-            &:hover{
-                color:brown;
-            }
-          }
-
-          .relou {
-              padding-left: 9vw;
-              padding-right: 9vw;
-          }
-
-
+      .relou {
+        padding-left: 9vw;
+        padding-right: 9vw;
       }
     }
-
+  }
 }
 
-@import 'mobile';
+@import "mobile";
