--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -141,6 +141,7 @@
             background: url('../media/coucou.jpg');
             background-size: cover;
             border-radius: 50%;
+            opacity: 1;
             
             //opacity: 0.4;
             @include easeOut;
