--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -30,71 +30,83 @@
     }
     
   }
+  
 
   #work {
-    h1 {
-      font-size: 4rem;
-    }
     .container-grid {
-      margin-left: -2vw;
-      margin-right: 5vw;
-      display: grid;
+      margin-bottom: 5vh;
       grid-template-areas: 
-      'box1'
-      'box2'
-      'box4'
-      'box3';
-      
+      "box1"
+      "box2"
+      "box4"
+      "box3"
+      "box5"
+      "box6";
       grid-template-columns: 1fr;
 
-      .box1 {
-        grid-area: box1;
-        background-image: url('../media/degrade-rouge.png');
+      .box1 .img,
+      .box2 .img,
+      .box3 .img,
+      .box4 .img,
+      .box5 .img,
+      .box6 .img{
+        width: 70%;
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+      }
 
-        .img {
-          width: 70%;
-          margin: auto;
-          margin-top: 10vh;
-          margin-bottom: 10vh;
-             
-          img {
-            width: 100%;
-          }
+  
+    }
+
+    .container-gallerie1 {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+
+      .title-gallerie1{
+        
+        width: 70%;
+        text-align: center;
+        h3 {
+          font-size: 2rem;
+        }
+        .text-secondary {
+          color: $secondary-color;
+          font-size: 2rem;
         }
       }
 
-      .box2 {
-          grid-area: box2;
-          justify-content: justify;
-          padding: 8vw 5vw;
+      .container {
+        width: 85%;
+        max-width: 560px;
+        margin: auto;
+        margin-top: 5vh;
+        
+        border: set-text-color($primary-color) solid 2px;
+        background:set-text-color($primary-color); 
+        .main-img img, 
+        .imgs img {
+          width: 100%;
+          cursor: pointer;
+        }
+  
+        .imgs {
+          display: grid;
+          grid-template-columns: repeat(2,1fr);
+          grid-gap:3px;
+        }
       }
 
-      .box3 {
-          grid-area: box3;
-          justify-content: justify;
-          padding: 8vw 5vw;
-      }
 
-      .box4 {
-          grid-area: box4;
-          background-image: linear-gradient(to right top, #26447a, #215181, #225d87, #236189, #2f728f, #4c98b6);            
-          .img {
-            width: 70%;
-            margin: auto;
-            margin-top: 10vh;
-            margin-bottom: 10vh;
-            
-                
-            img {
-              width: 100%;
-              margin: auto;
-            } 
-          }
-     
-      }
+    }
+
 
   }
-  }
+
+  
+
+  
+
 
   #contact {
 
@@ -102,11 +114,27 @@
       display: flex;
       flex-direction: column-reverse;
 
-      .container-left {
+      .contact-left {
         height: 10%;
       }
+
+
+
+      .contact-right {
+        h2 {
+          font-size: 2rem;
+        }
+        h3 {
+          width: 30vw;
+          font-size: 1.7rem;
+        }
+        text-align: left;
+      }
+
+ 
     }
   }
+
   main {
         align-items: center; 
         text-align: center; 
@@ -117,51 +145,47 @@
         }
     
         //headings 
-h1,
-h2, 
-h3 {
-    margin: 0; 
-    font-weight: 200;
-    &.lg-heading {
+    h1,
+    h2, 
+    h3 {
+      margin: 0; 
+      font-weight: 200;
+      &.lg-heading {
         font-size: 3rem;
         margin-right: 5vw;
-    }
+      }
 
-    &.sm-heading {
+      &.sm-heading {
         margin-bottom: 0.2rem;
         padding: 0.2rem 1rem;
         background: rgba(lighten($primary-color,4), 0.6);
         width: 80vw;
         
         margin-right: 5vw;
-    }
+      }
 
-    &.sm-sub-heading {
+      &.sm-sub-heading {
         margin-bottom: 1rem;
         padding: 0.4rem 1rem;
         text-align: justify;
         background: rgba(lighten($primary-color,4), 0.6);
         width: 80vw;
+      }
     }
-
-}
-
-
-    }
+  }
 
   .menu-btn {
    
     border-radius: 50%;
 
     .btn-line {
-
         background: $secondary-color;
     }
 
     &.close {
-        transform: rotate(180deg);
+      transform: rotate(180deg);
 
-        .btn-line {
+    .btn-line {
           // Line 1 - Rotate
           &:nth-child(1) {
               background-color:  $primary-color;
@@ -184,6 +208,7 @@ h3 {
         }
     }
   }
+
   ul.menu-nav, 
   div.menu-branding {
     float: none;
@@ -218,8 +243,9 @@ h3 {
     
 }
 
-
 }
+
+
 // Smartphone
 
 @include mediaSm {
