--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -12,8 +12,11 @@
         display: grid;
         grid-template-areas: 
         'box1 box2'
-        'box3 box4';
+        'box3 box4'
+        'box5 box6';
         grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 15vh;
+        
 
         .box1 {
           grid-area: box1;
@@ -63,7 +66,75 @@
        
         }
 
+        .box5 {
+          grid-area: box5;
+          background-image: linear-gradient(to right top, #7ee31e, #91e41d, #a2e51f, #b1e522, #c0e627, #cae829, #d3eb2b, #dded2d, #e5f22b, #eef629, #f6fb27, #ffff25);            
+          .img {
+            width: 40%;
+            margin: auto;
+            margin-top: 14vh;
+            
+                
+            img {
+              width: 100%;
+              margin: auto;
+            } 
+          }
+     
+      }
+
+        .box6 {
+          grid-area: box6;
+          justify-content: justify;
+          padding: 8vw 5vw;
+      }
+
+
+
     }
+
+    .container-gallerie1 {
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      .title-gallerie1{
+        
+        width: 40%;
+        text-align: center;
+        h3 {
+          font-size: 4rem;
+        }
+        .text-secondary {
+          color: $secondary-color;
+          font-size: 4rem;
+        }
+      }
+
+      .container {
+        width: 80%;
+        max-width: 560px;
+        margin: auto;
+        margin-right: 3vw;
+        border: set-text-color($primary-color) solid 6px;
+        background:set-text-color($primary-color); 
+        .main-img img, 
+        .imgs img {
+          width: 100%;
+          cursor: pointer;
+        }
+  
+        .imgs {
+          display: grid;
+          grid-template-columns: repeat(4,1fr);
+          grid-gap:7px;
+        }
+      }
+  
+  }
+    
 }
 
 @import 'mobile';
