--- a/scss/main.css
+++ b/scss/main.css
@@ -147,6 +147,7 @@
   background: url("../media/coucou.jpg");
   background-size: cover;
   border-radius: 50%;
+  opacity: 1;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
@@ -287,67 +288,62 @@
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work h1 {
-    font-size: 4rem;
-  }
   #work .container-grid {
-    margin-left: -2vw;
-    margin-right: 5vw;
-    display: -ms-grid;
-    display: grid;
-        grid-template-areas: 'box1' 'box2' 'box4' 'box3';
+    margin-bottom: 5vh;
+        grid-template-areas: "box1" "box2" "box4" "box3" "box5" "box6";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work .container-grid .box1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: box1;
-    background-image: url("../media/degrade-rouge.png");
-  }
-  #work .container-grid .box1 .img {
+  #work .container-grid .box1 .img,
+  #work .container-grid .box2 .img,
+  #work .container-grid .box3 .img,
+  #work .container-grid .box4 .img,
+  #work .container-grid .box5 .img,
+  #work .container-grid .box6 .img {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
-  #work .container-grid .box1 .img img {
-    width: 100%;
+  #work .container-gallerie1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
   }
-  #work .container-grid .box2 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 2;
-    grid-area: box2;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box3 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: box3;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box4 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 2;
-    grid-area: box4;
-    background-image: -webkit-gradient(linear, left bottom, right top, from(#26447a), color-stop(#215181), color-stop(#225d87), color-stop(#236189), color-stop(#2f728f), to(#4c98b6));
-    background-image: linear-gradient(to right top, #26447a, #215181, #225d87, #236189, #2f728f, #4c98b6);
-  }
-  #work .container-grid .box4 .img {
+  #work .container-gallerie1 .title-gallerie1 {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    text-align: center;
   }
-  #work .container-grid .box4 .img img {
-    width: 100%;
+  #work .container-gallerie1 .title-gallerie1 h3 {
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .title-gallerie1 .text-secondary {
+    color: #F8CB3A;
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .container {
+    width: 85%;
+    max-width: 560px;
     margin: auto;
+    margin-top: 5vh;
+    border: #fff solid 2px;
+    background: #fff;
+  }
+  #work .container-gallerie1 .container .main-img img,
+  #work .container-gallerie1 .container .imgs img {
+    width: 100%;
+    cursor: pointer;
+  }
+  #work .container-gallerie1 .container .imgs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3px;
   }
   #contact .container-contact {
     display: -webkit-box;
@@ -358,8 +354,18 @@
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
-  #contact .container-contact .container-left {
+  #contact .container-contact .contact-left {
     height: 10%;
+  }
+  #contact .container-contact .contact-right {
+    text-align: left;
+  }
+  #contact .container-contact .contact-right h2 {
+    font-size: 2rem;
+  }
+  #contact .container-contact .contact-right h3 {
+    width: 30vw;
+    font-size: 1.7rem;
   }
   main {
     -webkit-box-align: center;
@@ -474,9 +480,10 @@
   margin-right: 5vw;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: 'box1 box2' 'box3 box4';
+      grid-template-areas: 'box1 box2' 'box3 box4' 'box5 box6';
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 15vh;
 }
 
 #work .container-grid .box1 {
@@ -538,6 +545,88 @@
   margin: auto;
 }
 
+#work .container-grid .box5 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: box5;
+  background-image: -webkit-gradient(linear, left bottom, right top, from(#7ee31e), color-stop(#91e41d), color-stop(#a2e51f), color-stop(#b1e522), color-stop(#c0e627), color-stop(#cae829), color-stop(#d3eb2b), color-stop(#dded2d), color-stop(#e5f22b), color-stop(#eef629), color-stop(#f6fb27), to(#ffff25));
+  background-image: linear-gradient(to right top, #7ee31e, #91e41d, #a2e51f, #b1e522, #c0e627, #cae829, #d3eb2b, #dded2d, #e5f22b, #eef629, #f6fb27, #ffff25);
+}
+
+#work .container-grid .box5 .img {
+  width: 40%;
+  margin: auto;
+  margin-top: 14vh;
+}
+
+#work .container-grid .box5 .img img {
+  width: 100%;
+  margin: auto;
+}
+
+#work .container-grid .box6 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: box6;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: justify;
+  padding: 8vw 5vw;
+}
+
+#work .container-gallerie1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#work .container-gallerie1 .title-gallerie1 {
+  width: 40%;
+  text-align: center;
+}
+
+#work .container-gallerie1 .title-gallerie1 h3 {
+  font-size: 4rem;
+}
+
+#work .container-gallerie1 .title-gallerie1 .text-secondary {
+  color: #F8CB3A;
+  font-size: 4rem;
+}
+
+#work .container-gallerie1 .container {
+  width: 80%;
+  max-width: 560px;
+  margin: auto;
+  margin-right: 3vw;
+  border: #fff solid 6px;
+  background: #fff;
+}
+
+#work .container-gallerie1 .container .main-img img,
+#work .container-gallerie1 .container .imgs img {
+  width: 100%;
+  cursor: pointer;
+}
+
+#work .container-gallerie1 .container .imgs {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-gap: 7px;
+}
+
 @media screen and (max-width: 758px) {
   #about h1 {
     font-size: 3rem;
@@ -547,67 +636,62 @@
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work h1 {
-    font-size: 4rem;
-  }
   #work .container-grid {
-    margin-left: -2vw;
-    margin-right: 5vw;
-    display: -ms-grid;
-    display: grid;
-        grid-template-areas: 'box1' 'box2' 'box4' 'box3';
+    margin-bottom: 5vh;
+        grid-template-areas: "box1" "box2" "box4" "box3" "box5" "box6";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work .container-grid .box1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: box1;
-    background-image: url("../media/degrade-rouge.png");
-  }
-  #work .container-grid .box1 .img {
+  #work .container-grid .box1 .img,
+  #work .container-grid .box2 .img,
+  #work .container-grid .box3 .img,
+  #work .container-grid .box4 .img,
+  #work .container-grid .box5 .img,
+  #work .container-grid .box6 .img {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
-  #work .container-grid .box1 .img img {
-    width: 100%;
+  #work .container-gallerie1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
   }
-  #work .container-grid .box2 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: box2;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box3 {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-    grid-area: box3;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box4 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    grid-area: box4;
-    background-image: -webkit-gradient(linear, left bottom, right top, from(#26447a), color-stop(#215181), color-stop(#225d87), color-stop(#236189), color-stop(#2f728f), to(#4c98b6));
-    background-image: linear-gradient(to right top, #26447a, #215181, #225d87, #236189, #2f728f, #4c98b6);
-  }
-  #work .container-grid .box4 .img {
+  #work .container-gallerie1 .title-gallerie1 {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    text-align: center;
   }
-  #work .container-grid .box4 .img img {
-    width: 100%;
+  #work .container-gallerie1 .title-gallerie1 h3 {
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .title-gallerie1 .text-secondary {
+    color: #F8CB3A;
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .container {
+    width: 85%;
+    max-width: 560px;
     margin: auto;
+    margin-top: 5vh;
+    border: #fff solid 2px;
+    background: #fff;
+  }
+  #work .container-gallerie1 .container .main-img img,
+  #work .container-gallerie1 .container .imgs img {
+    width: 100%;
+    cursor: pointer;
+  }
+  #work .container-gallerie1 .container .imgs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3px;
   }
   #contact .container-contact {
     display: -webkit-box;
@@ -618,8 +702,18 @@
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
-  #contact .container-contact .container-left {
+  #contact .container-contact .contact-left {
     height: 10%;
+  }
+  #contact .container-contact .contact-right {
+    text-align: left;
+  }
+  #contact .container-contact .contact-right h2 {
+    font-size: 2rem;
+  }
+  #contact .container-contact .contact-right h3 {
+    width: 30vw;
+    font-size: 1.7rem;
   }
   main {
     -webkit-box-align: center;
@@ -767,26 +861,36 @@
 
 #contact .container-contact .contact-right h3 {
   font-size: 2rem;
-  width: 8w;
-  border-bottom: 2px #FFFFFF solid;
+  width: 20vw;
   margin-bottom: 2vh;
-  color: #FFFFFF;
+  color: #181716;
+  background-color: #fff;
   font-weight: 600;
+  padding: 4px 10px;
+  text-align: center;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+#contact .container-contact .contact-right h3:hover {
+  background-color: #000;
+  color: #F8CB3A;
+  cursor: pointer;
 }
 
 #contact .container-contact .contact-right p {
-  margin-bottom: 2vh;
+  margin-bottom: 5vh;
 }
 
 #contact .container-contact .contact-right i {
-  color: #181716;
+  color: #000;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
   padding: 1vw;
 }
 
 #contact .container-contact .contact-right i:hover {
-  color: brown;
+  color: #fff;
 }
 
 #contact .container-contact .contact-right .relou {
@@ -803,67 +907,62 @@
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work h1 {
-    font-size: 4rem;
-  }
   #work .container-grid {
-    margin-left: -2vw;
-    margin-right: 5vw;
-    display: -ms-grid;
-    display: grid;
-        grid-template-areas: 'box1' 'box2' 'box4' 'box3';
+    margin-bottom: 5vh;
+        grid-template-areas: "box1" "box2" "box4" "box3" "box5" "box6";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work .container-grid .box1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: box1;
-    background-image: url("../media/degrade-rouge.png");
-  }
-  #work .container-grid .box1 .img {
+  #work .container-grid .box1 .img,
+  #work .container-grid .box2 .img,
+  #work .container-grid .box3 .img,
+  #work .container-grid .box4 .img,
+  #work .container-grid .box5 .img,
+  #work .container-grid .box6 .img {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
-  #work .container-grid .box1 .img img {
-    width: 100%;
+  #work .container-gallerie1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
   }
-  #work .container-grid .box2 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: box2;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box3 {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-    grid-area: box3;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box4 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    grid-area: box4;
-    background-image: -webkit-gradient(linear, left bottom, right top, from(#26447a), color-stop(#215181), color-stop(#225d87), color-stop(#236189), color-stop(#2f728f), to(#4c98b6));
-    background-image: linear-gradient(to right top, #26447a, #215181, #225d87, #236189, #2f728f, #4c98b6);
-  }
-  #work .container-grid .box4 .img {
+  #work .container-gallerie1 .title-gallerie1 {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    text-align: center;
   }
-  #work .container-grid .box4 .img img {
-    width: 100%;
+  #work .container-gallerie1 .title-gallerie1 h3 {
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .title-gallerie1 .text-secondary {
+    color: #F8CB3A;
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .container {
+    width: 85%;
+    max-width: 560px;
     margin: auto;
+    margin-top: 5vh;
+    border: #fff solid 2px;
+    background: #fff;
+  }
+  #work .container-gallerie1 .container .main-img img,
+  #work .container-gallerie1 .container .imgs img {
+    width: 100%;
+    cursor: pointer;
+  }
+  #work .container-gallerie1 .container .imgs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3px;
   }
   #contact .container-contact {
     display: -webkit-box;
@@ -874,8 +973,18 @@
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
-  #contact .container-contact .container-left {
+  #contact .container-contact .contact-left {
     height: 10%;
+  }
+  #contact .container-contact .contact-right {
+    text-align: left;
+  }
+  #contact .container-contact .contact-right h2 {
+    font-size: 2rem;
+  }
+  #contact .container-contact .contact-right h3 {
+    width: 30vw;
+    font-size: 1.7rem;
   }
   main {
     -webkit-box-align: center;
@@ -1096,67 +1205,62 @@ main#home h1 {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work h1 {
-    font-size: 4rem;
-  }
   #work .container-grid {
-    margin-left: -2vw;
-    margin-right: 5vw;
-    display: -ms-grid;
-    display: grid;
-        grid-template-areas: 'box1' 'box2' 'box4' 'box3';
+    margin-bottom: 5vh;
+        grid-template-areas: "box1" "box2" "box4" "box3" "box5" "box6";
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
-  #work .container-grid .box1 {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: box1;
-    background-image: url("../media/degrade-rouge.png");
-  }
-  #work .container-grid .box1 .img {
+  #work .container-grid .box1 .img,
+  #work .container-grid .box2 .img,
+  #work .container-grid .box3 .img,
+  #work .container-grid .box4 .img,
+  #work .container-grid .box5 .img,
+  #work .container-grid .box6 .img {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
-  #work .container-grid .box1 .img img {
-    width: 100%;
+  #work .container-gallerie1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
   }
-  #work .container-grid .box2 {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: box2;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box3 {
-    -ms-grid-row: 4;
-    -ms-grid-column: 1;
-    grid-area: box3;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: justify;
-    padding: 8vw 5vw;
-  }
-  #work .container-grid .box4 {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    grid-area: box4;
-    background-image: -webkit-gradient(linear, left bottom, right top, from(#26447a), color-stop(#215181), color-stop(#225d87), color-stop(#236189), color-stop(#2f728f), to(#4c98b6));
-    background-image: linear-gradient(to right top, #26447a, #215181, #225d87, #236189, #2f728f, #4c98b6);
-  }
-  #work .container-grid .box4 .img {
+  #work .container-gallerie1 .title-gallerie1 {
     width: 70%;
-    margin: auto;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    text-align: center;
   }
-  #work .container-grid .box4 .img img {
-    width: 100%;
+  #work .container-gallerie1 .title-gallerie1 h3 {
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .title-gallerie1 .text-secondary {
+    color: #F8CB3A;
+    font-size: 2rem;
+  }
+  #work .container-gallerie1 .container {
+    width: 85%;
+    max-width: 560px;
     margin: auto;
+    margin-top: 5vh;
+    border: #fff solid 2px;
+    background: #fff;
+  }
+  #work .container-gallerie1 .container .main-img img,
+  #work .container-gallerie1 .container .imgs img {
+    width: 100%;
+    cursor: pointer;
+  }
+  #work .container-gallerie1 .container .imgs {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 3px;
   }
   #contact .container-contact {
     display: -webkit-box;
@@ -1167,8 +1271,18 @@ main#home h1 {
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
-  #contact .container-contact .container-left {
+  #contact .container-contact .contact-left {
     height: 10%;
+  }
+  #contact .container-contact .contact-right {
+    text-align: left;
+  }
+  #contact .container-contact .contact-right h2 {
+    font-size: 2rem;
+  }
+  #contact .container-contact .contact-right h3 {
+    width: 30vw;
+    font-size: 1.7rem;
   }
   main {
     -webkit-box-align: center;
