--- a/scss/_chatbox.scss
+++ b/scss/_chatbox.scss
@@ -1,4 +1,4 @@
-#container-chat-box  {
+#container-faq-box  {
   position: fixed;
   top: 85vh;
   left: 2vw;
@@ -35,23 +35,65 @@
 
   #questions-reponses {
     position: fixed;
-    left: 10vw;
-    top: 50vh;
+    left: 14vw;
+    top: 35vh;
     background-color: white;
     color: black;
-    height: 45vh;
+    height: 50vh;
     width: 45vw;
     border-radius: 15px;
     border: $secondary-color 7px solid;
     padding: 1rem;
-    transform: translate3D(0, 300%, 0);
+    transform: translate3D(-20%, 150%, 0);
     visibility: hidden;
+    overflow-y: scroll;
+    opacity: 0;
     @include easeOut;
+  
+    
+
+    .accordion {
+      
+      
+      color: $primary-color;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      transition: 0.4s;
+    }
+    
+    .active, .accordion:hover {
+      background-color: $secondary-color; 
+      color: set-text-color($secondary-color)
+    }
+    
+    .panel {
+      padding: 0 18px;
+      display: none;
+      background-color: white;
+      overflow: hidden;
+    }
 
     &.show {
         visibility: visible;
         transform: translate3d(0,0,0);
     }
+
+    .reponse-faq {
+      display: none;
+      @include easeOut;
+
+      &.showAnswerFaq {
+        display: block;
+
+      }
+    }
   }
+
+
 
 }
