--- a/scss/main.css
+++ b/scss/main.css
@@ -1139,14 +1139,14 @@
   }
 }
 
-#container-chat-box {
+#container-faq-box {
   position: fixed;
   top: 85vh;
   left: 2vw;
   z-index: 2;
 }
 
-#container-chat-box #question {
+#container-faq-box #question {
   background-color: white;
   padding: 0.5rem;
   color: #181716;
@@ -1159,47 +1159,84 @@
   transition: all 0.5s ease-out;
 }
 
-#container-chat-box #question i {
+#container-faq-box #question i {
   color: #F8CB3A;
 }
 
-#container-chat-box #question i.show {
+#container-faq-box #question i.show {
   color: #0d110d;
 }
 
-#container-chat-box #question:hover {
+#container-faq-box #question:hover {
   opacity: 1;
   border-color: #f6be09;
 }
 
-#container-chat-box #question.show {
+#container-faq-box #question.show {
   border: 7px green solid;
   color: green;
   opacity: 1;
 }
 
-#container-chat-box #questions-reponses {
+#container-faq-box #questions-reponses {
   position: fixed;
-  left: 10vw;
-  top: 50vh;
+  left: 14vw;
+  top: 35vh;
   background-color: white;
   color: black;
-  height: 45vh;
+  height: 50vh;
   width: 45vw;
   border-radius: 15px;
   border: #F8CB3A 7px solid;
   padding: 1rem;
-  -webkit-transform: translate3D(0, 300%, 0);
-          transform: translate3D(0, 300%, 0);
+  -webkit-transform: translate3D(-20%, 150%, 0);
+          transform: translate3D(-20%, 150%, 0);
   visibility: hidden;
+  overflow-y: scroll;
+  opacity: 0;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
 }
 
-#container-chat-box #questions-reponses.show {
+#container-faq-box #questions-reponses .accordion {
+  color: #181716;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#container-faq-box #questions-reponses .active, #container-faq-box #questions-reponses .accordion:hover {
+  background-color: #F8CB3A;
+  color: #000;
+}
+
+#container-faq-box #questions-reponses .panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
+#container-faq-box #questions-reponses.show {
   visibility: visible;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
+}
+
+#container-faq-box #questions-reponses .reponse-faq {
+  display: none;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+
+#container-faq-box #questions-reponses .reponse-faq.showAnswerFaq {
+  display: block;
 }
 
 * {
